<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="my_apps">My Nanodegree Apps!</string>
    <string name="btn_spotify_streamer">Spotify streamer</string>
    <string name="btn_scores_app">Scores app</string>
    <string name="btn_library_app">Library app</string>
    <string name="btn_build_it_bigger">Build it bigger</string>
    <string name="btn_bacon_reader">Bacon reader</string>
    <string name="btn_capstone_my_own_app">Capstone: My own app</string>
    <string name="launch_btn_text">This button will launch</string>
</resources>
